--- a/options/options.html
+++ b/options/options.html
@@ -52,6 +52,7 @@
     <div class="form-group">
       <label for="fileTypes" data-i18n="fileTypesLabel"></label>
       <input type="text" id="fileTypes" class="form-control" data-i18n-placeholder="fileTypesPlaceholder">
+      <div id="fileTypesHelp" class="file-types-help"></div>
       <small class="help-text" data-i18n="fileTypesSettingHelp"></small>
     </div>
 
