--- a/popup/popup.html
+++ b/popup/popup.html
@@ -88,6 +88,7 @@
   <div class="buttons">
     <button id="openOptions"></button>
     <button id="toggleSniffing"></button>
+    <button id="toggleBrowserControl"></button>
     <button id="reconnect" class="secondary"></button>
   </div>
 
